--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
           </form>
         </div>
-        <p class="sub" style="margin-top:10px">E‑post: <a href="mailto:tahti@konnaclothing.org">tahti@konnaclothing.org</a> · Asukoht: Tallinn, Eesti</p>
+        <p class="sub" style="margin-top:10px">E‑post: <a href="mailto:tahti@konnaclothing.org">tahti@konnaclothing.org</a> · Asukoht: Lootsi tn 3a-60 10151 Tallinn </p>
       </div>
     </section>
   </main>
@@ -291,3 +291,4 @@
   </script>
 </body>
 </html>
+
